--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <!-- 解决移动端input放大 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <style>body{margin: 0;}</style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=CPpQFhy4TetApzqNFp5gNcOmKDxU5cfM"></script>
     <title>vuedemo2</title>
