--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <style>body{margin: 0;}</style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=CPpQFhy4TetApzqNFp5gNcOmKDxU5cfM"></script>
-    <title>vuedemo2</title>
+    <title>基于Vue的影院网站</title>
     <style>
       body{
         margin: 0;
